fix tests.